--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -184,7 +184,15 @@ Correspondence concerning this article should be addressed to Christoph Scheffel
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Faculty of Psychology, Technische Universität Dresden, 01069 Dresden, Germany}
 
 \abstract{
-Individuals have a repertoire of emotion regulation (ER) strategies at their disposal, which they can use more or less flexibly. In ER flexibility research, strategies that facilitate goal achievement are considered adaptive and therefore are subjectively valuable. Individuals are motivated to reduce their emotional arousal effectively and to avoid cognitive effort. Perceived costs of ER strategies in form of effort however, are highly subjective. Subjective values (SVs) should therefore represent a trade-off between effectiveness and subjectively required cognitive effort. However, SVs of ER strategies have not been determined so far. We present a paradigm that is suitable for determining individual SVs of ER strategies. Using a multilevel modelling approach, it will be investigated whether individual SVs can be explained by effectiveness (subjective arousal, facial muscle activity) and subjective effort. Relations of SVs to personality traits will be explored
+Individuals have a repertoire of emotion regulation (ER) strategies at their disposal, which they can use more or less flexibly.
+In ER flexibility research, strategies that facilitate goal achievement are considered adaptive and therefore are subjectively valuable.
+Individuals are motivated to reduce their emotional arousal effectively and to avoid cognitive effort.
+Perceived costs of ER strategies in the form of effort, however, are highly subjective.
+Subjective values (SVs) should therefore represent a trade-off between effectiveness and subjectively required cognitive effort.
+However, SVs of ER strategies have not been determined so far.
+We present a paradigm that is suitable for determining individual SVs of ER strategies.
+Using a multilevel modelling approach, it will be investigated whether individual SVs can be explained by effectiveness (subjective arousal, facial muscle activity) and subjective effort.
+Relations of SVs to personality traits will be explored
 }
 
 
@@ -292,7 +300,7 @@ Then no SV will be 1, but still, the SVs of all strategies can be interpreted as
 Additionally, we will test our adapted paradigm in a \emph{n}-back task and explore whether this paradigm can describe individuals that do not prefer the easiest \emph{n}-back option (see Zerna et al., \ldots).
 
 \begin{figure}
-\includegraphics[width=0.98\linewidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/99_Thinktank/other/Paradigm_Scheme_T2} \caption{Exemplary visualisation of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.}\label{fig:fig1}
+\includegraphics[width=0.98\linewidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/99_Thinktank/Other/Paradigm_Scheme_T2} \caption{Exemplary visualisation of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.}\label{fig:fig1}
 \end{figure}
 
 \hypertarget{the-present-study}{%
@@ -749,7 +757,7 @@ The authors declare no competing interests.
 
 \newpage
 \begin{figure}
-\includegraphics[width=0.98\linewidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/99_Thinktank/other/Paradigm_Scheme_T2} \caption{ }\label{fig:fig1appendix}
+\includegraphics[width=0.98\linewidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/99_Thinktank/Other/Paradigm_Scheme_T2} \caption{ }\label{fig:fig1appendix}
 \end{figure}
 
 \emph{Figure 1.} Exemplary visualisation of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.
@@ -767,7 +775,7 @@ The authors declare no competing interests.
 \newpage
 
 \hypertarget{pilot-study-subjective-arousal-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}{%
-\subsection{Pilot study: Subjective arousal in the conditions ``active viewing - neutral'' and ``active viewing - negative''}\label{pilot-study-subjective-arousal-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}}
+\subsection{Pilot study: Subjective arousal in the conditions ``Active viewing - neutral'' and ``Active viewing - negative''}\label{pilot-study-subjective-arousal-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}}
 
 ANOVA:
 
@@ -794,7 +802,7 @@ Paired contrasts:
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{negative} - View_{neutral}$ & 129.28 & 22.07 & 15.00 & 5.86 & 0.00 & 794.78 & 0.70 & {}[0.43, 1.00]\\
+$View_{neutral} - View_{negative}$ & -129.28 & 22.07 & 15.00 & -5.86 & 0.00 & 794.78 & 0.70 & {}[0.43, 1.00]\\
 \bottomrule
 \addlinespace
 \end{tabular}
@@ -842,12 +850,12 @@ Paired contrasts:
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$Distancing - Distraction$ & 4.61 & 16.14 & 45.00 & 0.29 & 1.00 & 0.26 & 1.81e-03 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & -20.88 & 16.14 & 45.00 & -1.29 & 1.00 & 0.27 & 0.04 & {}[0.00, 1.00]\\
-$Distancing - View_{negative}$ & 5.35 & 16.14 & 45.00 & 0.33 & 1.00 & 1.25 & 2.43e-03 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & -25.49 & 16.14 & 45.00 & -1.58 & 0.73 & 0.26 & 0.05 & {}[0.00, 1.00]\\
-$Distraction - View_{negative}$ & 0.74 & 16.14 & 45.00 & 0.05 & 1.00 & 0.77 & 4.68e-05 & {}[0.00, 1.00]\\
-$Suppression - View_{negative}$ & 26.23 & 16.14 & 45.00 & 1.63 & 0.67 & 0.52 & 0.06 & {}[0.00, 1.00]\\
+$View_{negative} - Distraction$ & -0.74 & 16.14 & 45.00 & -0.05 & 1.00 & 0.26 & 4.68e-05 & {}[0.00, 1.00]\\
+$View_{negative} - Distancing$ & -5.35 & 16.14 & 45.00 & -0.33 & 1.00 & 0.27 & 2.43e-03 & {}[0.00, 1.00]\\
+$View_{negative} - Suppression$ & -26.23 & 16.14 & 45.00 & -1.63 & 0.67 & 1.25 & 0.06 & {}[0.00, 1.00]\\
+$Distraction - Distancing$ & -4.61 & 16.14 & 45.00 & -0.29 & 1.00 & 0.26 & 1.81e-03 & {}[0.00, 1.00]\\
+$Distraction - Suppression$ & -25.49 & 16.14 & 45.00 & -1.58 & 0.73 & 0.77 & 0.05 & {}[0.00, 1.00]\\
+$Distancing - Suppression$ & -20.88 & 16.14 & 45.00 & -1.29 & 1.00 & 0.52 & 0.04 & {}[0.00, 1.00]\\
 \bottomrule
 \addlinespace
 \end{tabular}
@@ -865,6 +873,200 @@ Figure:
 
 \begin{figure}[H]
 \includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage1_files/figure-latex/FigSubjArousalRegPilot-1} \caption{Subjective arousal ratings for the conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression" visualized as boxplots. Each dot represents the effort rating of a single subject. Bold dots represent outliers.}\label{fig:FigSubjArousalRegPilot}
+\end{figure}
+
+\hypertarget{pilot-study-physiological-arousal-corrugator-and-levator-activity-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}{%
+\subsection{\texorpdfstring{Pilot study: Physiological arousal (\emph{Corrugator} and \emph{Levator} activity) in the conditions ``Active viewing - neutral'' and ``Active viewing - negative''}{Pilot study: Physiological arousal (Corrugator and Levator activity) in the conditions ``Active viewing - neutral'' and ``Active viewing - negative''}}\label{pilot-study-physiological-arousal-corrugator-and-levator-activity-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}}
+
+\emph{Corrugator}:
+ANOVA:
+
+\begin{tabular}{l|l|l|l|l|l}
+\hline
+Effect & df & MSE & F & ges & p.value\\
+\hline
+block & 1, 15 & 1.01 & 9.70 ** & .237 & .007\\
+\hline
+\end{tabular}
+
+\(BF10=\) 6,690,401.91
+
+Paired contrasts:
+
+\begin{table}[H]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:unnamed-chunk-5}Paired contrasts for the rmANOVA comparing physiological arousal (*Corrugator* activity) of negative and neutral pictures in the condition "active viewing".}
+
+\begin{tabular}{lllllllll}
+\toprule
+Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+\midrule
+$View_{neutral} - View_{negative}$ & -1.11 & 0.36 & 15.00 & -3.11 & 0.01 & 5,019,313.20 & 0.39 & {}[0.09, 1.00]\\
+\bottomrule
+\addlinespace
+\end{tabular}
+
+\begin{tablenotes}[para]
+\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
+\end{tablenotes}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
+
+\emph{Levator}:
+ANOVA:
+
+\begin{tabular}{l|l|l|l|l|l}
+\hline
+Effect & df & MSE & F & ges & p.value\\
+\hline
+block & 1, 15 & 0.17 & 7.72 * & .162 & .014\\
+\hline
+\end{tabular}
+
+\(BF10=\) 48.44
+
+Paired contrasts:
+
+\begin{table}[H]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:unnamed-chunk-6}Paired contrasts for the rmANOVA comparing physiological arousal (*Levator* activity) of negative and neutral pictures in the condition "active viewing".}
+
+\begin{tabular}{lllllllll}
+\toprule
+Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+\midrule
+$View_{neutral} - View_{negative}$ & -0.40 & 0.14 & 15.00 & -2.78 & 0.01 & 41.02 & 0.34 & {}[0.05, 1.00]\\
+\bottomrule
+\addlinespace
+\end{tabular}
+
+\begin{tablenotes}[para]
+\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
+\end{tablenotes}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
+
+Figures:
+
+\begin{figure}[H]
+\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage1_files/figure-latex/FigEMGCorrViewPilot-1} \caption{Corrugator activity for the conditions "Active viewing - neutral" and "Active viewing - negative" visualized as boxplots. Each dot represents the corrugator activity of a single trial. Bold dots represent outliers.}\label{fig:FigEMGCorrViewPilot}
+\end{figure}
+\begin{figure}[H]
+\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage1_files/figure-latex/FigEMGLevViewPilot-1} \caption{Levator activity for the conditions "Active viewing - neutral" and "Active viewing - negative" visualized as boxplots. Each dot represents the levator activity of a single trial. Bold dots represent outliers.}\label{fig:FigEMGLevViewPilot}
+\end{figure}
+
+\hypertarget{pilot-study-physiological-arousal-corrugator-and-levator-activity-in-the-conditionsactive-viewing---negative-distraction-distancing-and-suppression}{%
+\subsection{\texorpdfstring{Pilot study: Physiological arousal (\emph{Corrugator} and \emph{Levator} activity) in the conditions``Active viewing - negative'', ``Distraction'', ``Distancing'', and ``Suppression''}{Pilot study: Physiological arousal (Corrugator and Levator activity) in the conditions``Active viewing - negative'', ``Distraction'', ``Distancing'', and ``Suppression''}}\label{pilot-study-physiological-arousal-corrugator-and-levator-activity-in-the-conditionsactive-viewing---negative-distraction-distancing-and-suppression}}
+
+\emph{Corrugator}:
+ANOVA:
+
+\begin{tabular}{l|l|l|l|l|l}
+\hline
+Effect & df & MSE & F & ges & p.value\\
+\hline
+block & 1.53, 22.98 & 1.16 & 5.71 * & .189 & .015\\
+\hline
+\end{tabular}
+
+\(BF10=\) 5,257,689.54
+
+Paired contrasts:
+
+\begin{table}[H]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:unnamed-chunk-7}Paired contrasts for the rmANOVA comparing physiological arousal (*Corrugator* activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+
+\begin{tabular}{lllllllll}
+\toprule
+Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+\midrule
+$View_{negative} - Distraction$ & 0.88 & 0.27 & 45.00 & 3.22 & 0.01 & 4,962.89 & 0.19 & {}[0.05, 1.00]\\
+$View_{negative} - Distancing$ & 0.95 & 0.27 & 45.00 & 3.50 & 0.01 & 616.63 & 0.21 & {}[0.06, 1.00]\\
+$View_{negative} - Suppression$ & 0.92 & 0.27 & 45.00 & 3.40 & 0.01 & 11,678.82 & 0.20 & {}[0.06, 1.00]\\
+$Distraction - Distancing$ & 0.08 & 0.27 & 45.00 & 0.28 & 1.00 & 0.07 & 1.78e-03 & {}[0.00, 1.00]\\
+$Distraction - Suppression$ & 0.05 & 0.27 & 45.00 & 0.18 & 1.00 & 0.08 & 7.22e-04 & {}[0.00, 1.00]\\
+$Distancing - Suppression$ & -0.03 & 0.27 & 45.00 & -0.10 & 1.00 & 0.06 & 2.36e-04 & {}[0.00, 1.00]\\
+\bottomrule
+\addlinespace
+\end{tabular}
+
+\begin{tablenotes}[para]
+\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
+\end{tablenotes}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
+
+\emph{Levator}:
+ANOVA:
+
+\begin{tabular}{l|l|l|l|l|l}
+\hline
+Effect & df & MSE & F & ges & p.value\\
+\hline
+block & 2.07, 31.00 & 0.20 & 8.27 ** & .225 & .001\\
+\hline
+\end{tabular}
+
+\(BF10=\) 672,341.29
+
+Paired contrasts:
+
+\begin{table}[H]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:unnamed-chunk-8}Paired contrasts for the rmANOVA comparing physiological arousal (*Levator* activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+
+\begin{tabular}{lllllllll}
+\toprule
+Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+\midrule
+$View_{negative} - Distraction$ & 0.42 & 0.13 & 45.00 & 3.24 & 0.01 & 58.02 & 0.19 & {}[0.05, 1.00]\\
+$View_{negative} - Distancing$ & 0.45 & 0.13 & 45.00 & 3.46 & 0.01 & 93.49 & 0.21 & {}[0.06, 1.00]\\
+$View_{negative} - Suppression$ & 0.62 & 0.13 & 45.00 & 4.79 & 0.00 & 6,253.91 & 0.34 & {}[0.16, 1.00]\\
+$Distraction - Distancing$ & 0.03 & 0.13 & 45.00 & 0.22 & 1.00 & 0.07 & 1.06e-03 & {}[0.00, 1.00]\\
+$Distraction - Suppression$ & 0.20 & 0.13 & 45.00 & 1.54 & 0.78 & 1.52 & 0.05 & {}[0.00, 1.00]\\
+$Distancing - Suppression$ & 0.17 & 0.13 & 45.00 & 1.32 & 1.00 & 0.52 & 0.04 & {}[0.00, 1.00]\\
+\bottomrule
+\addlinespace
+\end{tabular}
+
+\begin{tablenotes}[para]
+\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
+\end{tablenotes}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
+
+Figures:
+
+\begin{figure}[H]
+\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage1_files/figure-latex/FigEMGCorrRegPilot-1} \caption{Corrugator activity for the conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression" visualized as boxplots. Each dot represents the corrugator activity of a single trial. Bold dots represent outliers.}\label{fig:FigEMGCorrRegPilot}
+\end{figure}
+\begin{figure}[H]
+\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage1_files/figure-latex/FigEMGLevRegPilot-1} \caption{Levator activity for the conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression" visualized as boxplots. Each dot represents the levator activity of a single trial. Bold dots represent outliers.}\label{fig:FigEMGLevRegPilot}
 \end{figure}
 
 \hypertarget{pilot-study-subjective-effort-in-the-conditions-active-viewing---negative-distraction-distancing-and-suppression}{%
@@ -889,18 +1091,18 @@ Paired contrasts:
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-5}Paired contrasts for the rmANOVA comparing subjective effort of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+\caption{\label{tab:unnamed-chunk-9}Paired contrasts for the rmANOVA comparing subjective effort of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
 
 \begin{tabular}{lllllllll}
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$Distancing - Distraction$ & -21.00 & 20.85 & 45.00 & -1.01 & 1.00 & 59.77 & 0.02 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & 1.57 & 20.85 & 45.00 & 0.08 & 1.00 & 20.49 & 1.27e-04 & {}[0.00, 1.00]\\
-$Distancing - View_{negative}$ & 89.72 & 20.85 & 45.00 & 4.30 & 0.00 & 33.13 & 0.29 & {}[0.12, 1.00]\\
-$Distraction - Suppression$ & 22.57 & 20.85 & 45.00 & 1.08 & 1.00 & 0.50 & 0.03 & {}[0.00, 1.00]\\
-$Distraction - View_{negative}$ & 110.72 & 20.85 & 45.00 & 5.31 & 0.00 & 0.57 & 0.39 & {}[0.20, 1.00]\\
-$Suppression - View_{negative}$ & 88.15 & 20.85 & 45.00 & 4.23 & 0.00 & 0.26 & 0.28 & {}[0.11, 1.00]\\
+$View_{negative} - Distancing$ & -110.72 & 20.85 & 45.00 & -5.31 & 0.00 & 59.77 & 0.39 & {}[0.20, 1.00]\\
+$View_{negative} - Distraction$ & -89.72 & 20.85 & 45.00 & -4.30 & 0.00 & 20.49 & 0.29 & {}[0.12, 1.00]\\
+$View_{negative} - Suppression$ & -88.15 & 20.85 & 45.00 & -4.23 & 0.00 & 33.13 & 0.28 & {}[0.11, 1.00]\\
+$Distraction - Distancing$ & 21.00 & 20.85 & 45.00 & 1.01 & 1.00 & 0.50 & 0.02 & {}[0.00, 1.00]\\
+$Distraction - Suppression$ & 22.57 & 20.85 & 45.00 & 1.08 & 1.00 & 0.57 & 0.03 & {}[0.00, 1.00]\\
+$Distancing - Suppression$ & 1.57 & 20.85 & 45.00 & 0.08 & 1.00 & 0.26 & 1.27e-04 & {}[0.00, 1.00]\\
 \bottomrule
 \addlinespace
 \end{tabular}
