--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -592,12 +592,18 @@ FigEMGCorrRegPilot <- ggplot2::ggplot(EMG_reg, aes(x = block, y = Corr))+
 
 # 2. Method
 
-The R Markdown file used to analyze the data and write this document, as well as the raw data and the materials are freely available at github.com/ChScheffel/COG-ER-ED.
-According to the 21-word-solution, "we report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study" in compliance with the 21-word-solution of open science [@Simmons2012].
-A complete list of all measures assessed in the study will be found at the OSF (<https://osf.io/vnj8x/>) and GitHub (github.com/ChScheffel/COG-ER-ED).
-<!-- Attention! OSF is still private --> All procedures performed in this study were in accordance with the ethical standards of the institutional and/or national research committee and with the 1964 Helsinki declaration and its later amendments or comparable ethical standards.
-
+We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study [@Simmons2012].
+The paradigm was written and presented using *Psychopy* [@Peirce2019].
+We used *R* with *R Studio* [@RCore2021; @RStudioTeam2020] with the main packages ... <!-- name and reference the main analysis packages, agian for consistentcy with Zerna et al. --> for all our analyses.
+The R Markdown file used to analyze the data and write this document, as well as the raw data and the materials are freely available at https://github.com/ChScheffel/CERED 
+A complete list of all measures assessed in the study can be found at OSF (<https://osf.io/vnj8x/>) and GitHub (https://github.com/ChScheffel/CERED).
+<!-- Attention! OSF is still private --> 
 ## 2.1 Ethics information
+
+<!-- So liest es sich in Josephines Ms. und so ähnlich liest es sich in publizierten NHB papers. -->
+The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK...).
+Prior to testing, written informed consent will be obtained.
+Participants will receive 30€ in total or course credit for participation.
 
 ## 2.2 Pilot data
 
