--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -623,7 +623,7 @@ Then, they complete an ED procedure on screen, followed by a random repetition o
 <!--JZ: Hast du ED schon als Abkürzung eingeführt?--> The second session, containing the ER paradigm, takes place exactly one week after session one.
 Participants provide informed consent and receive written instructions on the ER paradigm and ER strategies that they should apply.
 A brief training ensures that all participants are able to implement the ER strategies.
-Next, electrodes to measure EMG are being attached and the ER paradigm is conducted.
+Next, electrodes to measure EMG <!-- Has abbrev. EMG already are been introduced? -->being attached and the ER paradigm is conducted.
 Participants receive 30.00€ or course credit as compensation.
 Study data are being collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden [@Harris2009; @Harris2019].
 
@@ -637,7 +637,7 @@ Implicit theories of willpower in emotion control are assessed using the implici
 To assess Need for Cognition, the German version short form of the Need for Cognition Scale [@Cacioppo1982; @Bless1994] is used.
 To assess self-control, sum scores of the German versions of the following questionnaires are used [@Paschke2016]: the Self-Regulation Scale (SRS) [@Schwarzer1999], the Brief Self-Control Scale (BSCS) @Tangney2004; @Sproesser2011], and the Barratt Impulsiveness Scale (BIS-11) [@Patton1995; @Hartmann2011].
 Attentional control is assessed using the Attentional Control Scale (ACS) [@Derryberry2002].
-
+<!-- Not sure whether you can state this so briefly without giving more detailed information on, e.g., sample items, the scale on which answers are recorded (e.g., -3 ... +3), the relaiability of the measures. -->
 ### 2.3.2 Emotion regulation paradigm
 
 The ER paradigm roughly consists of three parts that will be described in the following.
